<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_collection_summary_consolidate_data_textView_mode"
        style="@style/style_text_view_default_width_weight"
        android:layout_weight="0.4"
        android:gravity="left"
        android:text="@string/mode_caps" />

    <TextView
        android:id="@+id/item_collection_summary_consolidate_data_textView_count"
        style="@style/style_text_view_default_width_weight"
        android:layout_weight="0.25"
        android:gravity="right"
        android:text="@string/txns_caps" />

    <TextView
        android:id="@+id/item_collection_summary_consolidate_data_textView_amount"
        style="@style/style_text_view_default_width_weight"
        android:layout_weight="0.35"
        android:gravity="right"
        android:text="@string/amount_caps" />

</LinearLayout>
