<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true"
    android:paddingLeft="@dimen/fragment_login_content_margin"
    android:paddingRight="@dimen/fragment_login_content_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fragment_login_content_margin"
        android:paddingRight="@dimen/fragment_login_content_margin">

        <ImageView style="@style/app_header_icon" />

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            style="@style/style_title_text_view_default"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin"
            android:layout_marginTop="@dimen/fragment_login_ver_margin"
            android:text="@string/login_to_your_account" />

        <!-- MERCHANT-ID / AGENT-ID -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_textInputLayout_merchant_id_mobile_number"
            style="@style/style_text_input_layout_hint"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin">

            <com.mkrworld.mobilpay.ui.custom.FontEditText
                android:id="@+id/fragment_login_editText_merchant_id_mobile_number"
                style="@style/style_text_view_single_line"
                android:hint="@string/mobile_number_star"
                android:inputType="number"
                android:maxLength="10" />

        </android.support.design.widget.TextInputLayout>

        <!-- PASSWORD -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_login_textInputLayout_password"
            style="@style/style_text_input_layout_hint"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin">

            <com.mkrworld.mobilpay.ui.custom.FontEditText
                android:id="@+id/fragment_login_editText_password"
                style="@style/style_text_view_single_line"
                android:hint="@string/password_star"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!-- RADIO GROUP -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/fragment_login_radio_merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.mkrworld.mobilpay.ui.custom.FontTextView
                style="@style/style_sub_text_view_default"
                android:text="@string/merchant" />

            <View
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/fragment_login_radio_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <com.mkrworld.mobilpay.ui.custom.FontTextView
                style="@style/style_sub_text_view_default"
                android:text="@string/agent" />

        </LinearLayout>

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            android:id="@+id/fragment_login_textView_sign_in"
            style="@style/style_button_width_full"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin"
            android:text="@string/sign_in_caps" />

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            android:id="@+id/fragment_login_textView_forgot_password"
            style="@style/style_sub_text_view_default"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin"
            android:text="@string/forgot_password_question" />

        <ImageView
            android:layout_width="@dimen/fragment_login_thumb_icon_dimen"
            android:layout_height="@dimen/fragment_login_thumb_icon_dimen"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fragment_login_ver_margin"
            android:src="@drawable/ic_fingerprint_normal" />

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            style="@style/style_title_text_view_default"
            android:layout_gravity="center_horizontal"
            android:text="@string/use_finger_print_question" />
    </LinearLayout>
</ScrollView>
