<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragment_qrcode_generator_content_margin"
        android:paddingLeft="@dimen/fragment_qrcode_generator_content_margin"
        android:paddingRight="@dimen/fragment_qrcode_generator_content_margin">

        <ImageView style="@style/app_header_icon" />


        <TextView
            style="@style/style_title_text_view_default"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_qrcode_generator_content_margin"
            android:text="@string/qrcode_generator" />

        <!-- BILL NUMBER -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_qrcode_generator_textInputLayout_bill_number"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_qrcode_generator_editText_bill_number"
                style="@style/style_text_view_single_line"
                android:hint="@string/bill_number_star"
                android:inputType="textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <!-- BILL DESCRIPTION -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_qrcode_generator_textInputLayout_bill_description"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_qrcode_generator_editText_bill_description"
                style="@style/style_text_view_single_line"
                android:hint="@string/bill_description_star"
                android:inputType="textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <!-- BILL AMOUNT -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_qrcode_generator_textInputLayout_bill_amount"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_qrcode_generator_editText_bill_amount"
                style="@style/style_text_view_single_line"
                android:hint="@string/bill_amount_star"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_qrcode_generator_content_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_qrcode_generator_textView_generate"
                style="@style/style_button_width_weight"
                android:text="@string/generate_caps" />

            <TextView
                android:id="@+id/fragment_qrcode_generator_textView_cancel"
                style="@style/style_button_inv_width_weight"
                android:layout_marginLeft="@dimen/fragment_qrcode_generator_button_margin"
                android:text="@string/cancel_caps" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
