<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_apes_collect_content_margin">

        <ImageView style="@style/app_header_icon" />

        <!-- CUSTOMER NAME -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_aeps_collect_textInputLayout_customer_name"
            style="@style/style_text_input_layout_hint">

            <com.mkrworld.mobilpay.ui.custom.EditTextDropDown
                android:id="@+id/fragment_aeps_collect_editText_customer_name"
                style="@style/style_text_view_single_line"
                android:hint="@string/customer_name"
                android:inputType="textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <!-- BANK NAME -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_aeps_collect_textInputLayout_bank_name"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_aeps_collect_editText_bank_name"
                style="@style/style_text_view_single_line"
                android:hint="@string/bank_name"
                android:inputType="textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <!-- TRANSACTION AMOUNT -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_aeps_collect_textInputLayout_transaction_amount"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_aeps_collect_editText_transaction_amount"
                style="@style/style_text_view_single_line"
                android:hint="@string/Transaction_amount_star"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <!-- MOBILE NUMBER -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_aeps_collect_textInputLayout_mobile_number"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_aeps_collect_editText_mobile_number"
                style="@style/style_text_view_single_line"
                android:hint="@string/mobile_number_star"
                android:inputType="number"
                android:maxLength="@integer/length_mobile_number" />

        </android.support.design.widget.TextInputLayout>

        <!-- AADHAR NUMBER -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_aeps_collect_textInputLayout_aadhar_number"
            style="@style/style_text_input_layout_hint">

            <EditText
                android:id="@+id/fragment_aeps_collect_editText_aadhar_number"
                style="@style/style_text_view_single_line"
                android:hint="@string/enter_last_4_digit_aadhar_number"
                android:inputType="number"
                android:maxLength="@integer/length_aadhar_number_4" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/fragment_aeps_collect_textView_aeps"
            style="@style/style_button_width_full"
            android:layout_marginTop="@dimen/fragment_apes_collect_content_margin"
            android:text="@string/aeps_caps" />
    </LinearLayout>
</ScrollView>
