<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back"
    android:clickable="true"
    android:fillViewport="true"
    android:focusable="true"
    android:paddingRight="@dimen/fragment_change_password_content_margin"
    android:paddingLeft="@dimen/fragment_change_password_content_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragment_change_password_content_margin"
        android:paddingLeft="@dimen/fragment_change_password_content_margin"
        android:paddingRight="@dimen/fragment_change_password_content_margin">

        <ImageView style="@style/app_header_icon" />

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            style="@style/style_title_text_view_default"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/fragment_change_password_content_margin"
            android:layout_marginTop="@dimen/fragment_change_password_content_margin"
            android:text="@string/change_your_password" />

        <!-- OLD PASSWORD -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_change_password_textInputLayout_old_password"
            style="@style/style_text_input_layout_hint">

            <com.mkrworld.mobilpay.ui.custom.FontEditText
                android:id="@+id/fragment_change_password_editText_old_password"
                style="@style/style_text_view_single_line"
                android:hint="@string/old_password_star"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!-- NEW PASSWORD -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_change_password_textInputLayout_new_password"
            style="@style/style_text_input_layout_hint">

            <com.mkrworld.mobilpay.ui.custom.FontEditText
                android:id="@+id/fragment_change_password_editText_new_password"
                style="@style/style_text_view_single_line"
                android:hint="@string/new_password_star"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!-- CONFIRM PASSWORD -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/fragment_change_password_textInputLayout_confirm_password"
            style="@style/style_text_input_layout_hint">

            <com.mkrworld.mobilpay.ui.custom.FontEditText
                android:id="@+id/fragment_change_password_editText_confirm_password"
                style="@style/style_text_view_single_line"
                android:hint="@string/confirm_password_star"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            android:id="@+id/fragment_change_password_textView_forgot_password"
            style="@style/style_sub_text_view_default"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_change_password_content_margin"
            android:text="@string/forgot_password_question" />

        <com.mkrworld.mobilpay.ui.custom.FontTextView
            android:id="@+id/fragment_change_password_textView_submit"
            style="@style/style_button_width_full"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/fragment_change_password_content_margin"
            android:text="@string/submit_caps" />

    </LinearLayout>
</ScrollView>
