<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView style="@style/app_header_icon" />

        <android.support.v7.widget.CardView
            style="@style/style_card_view_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- CUSTOMER-ID -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_agent_pay_cash_textInputLayout_customer_id"
                    style="@style/style_text_input_layout_hint">

                    <com.mkrworld.mobilpay.ui.custom.EditTextDropDown
                        android:id="@+id/fragment_agent_pay_cash_editText_customer_id"
                        style="@style/style_text_input_layout_inputText"
                        android:hint="@string/mobile_number_star"
                        android:inputType="textNoSuggestions" />

                </android.support.design.widget.TextInputLayout>

                <!-- BILL NUMBER -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_agent_pay_cash_textInputLayout_bill_number"
                    style="@style/style_text_input_layout_hint">

                    <EditText
                        android:id="@+id/fragment_agent_pay_cash_editText_bill_number"
                        style="@style/style_text_input_layout_inputText_hint"
                        android:hint="@string/bill_number_star"
                        android:inputType="textNoSuggestions" />

                </android.support.design.widget.TextInputLayout>

                <!-- BILL DESCRIPTION -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_agent_pay_cash_textInputLayout_bill_description"
                    style="@style/style_text_input_layout_hint">

                    <EditText
                        android:id="@+id/fragment_agent_pay_cash_editText_bill_description"
                        style="@style/style_text_input_layout_inputText_hint"
                        android:hint="@string/bill_description_star"
                        android:inputType="textNoSuggestions" />

                </android.support.design.widget.TextInputLayout>

                <!-- BILL AMOUNT -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_agent_pay_cash_textInputLayout_bill_amount"
                    style="@style/style_text_input_layout_hint">

                    <EditText
                        android:id="@+id/fragment_pay_cash_bill_editText_bill_amount"
                        style="@style/style_text_input_layout_inputText_hint"
                        android:hint="@string/bill_amount_star"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <!-- AMOUNT PAY -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fragment_agent_pay_cash_textInputLayout_bill_collected_amount"
                    style="@style/style_text_input_layout_hint">

                    <EditText
                        android:id="@+id/fragment_pay_cash_bill_editText_bill_collected_amount"
                        style="@style/style_text_input_layout_inputText_green"
                        android:hint="@string/collected_amount_star"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fragment_agent_pay_cash_content_margin"
                    android:layout_marginTop="@dimen/fragment_agent_pay_cash_content_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_agent_pay_cash_textView_send"
                        style="@style/style_button_width_weight"
                        android:text="@string/collect_caps" />

                    <TextView
                        android:id="@+id/fragment_pay_cash_bill_textView_cancel"
                        style="@style/style_button_width_weight"
                        android:layout_marginLeft="@dimen/fragment_agent_pay_cash_content_margin"
                        android:text="@string/cancel_caps" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
